working on the home page layout

--- a/index.html
+++ b/index.html
@@ -9,10 +9,273 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
     <title>Organization website template</title>
   </head>
   <body>
-    <h1>Hello word</h1>
+    <div class="container-body">
+      <div class="first-section">
+        <div class="container" style="padding: 0 80px 0 0 !important">
+          <div class="navbar">
+            <div class="logo">
+              <h1>team<b style="color: #5468e7">.</b></h1>
+            </div>
+            <div class="nav">
+              <a href=""><li>Product</li></a>
+              <a href=""><li>Blog</li></a>
+              <a href=""><li>Support</li></a>
+              <a href=""><li>Log In</li></a>
+
+              <button>Get Access</button>
+            </div>
+            <div class="hero-text">
+              <h1>Instant collaboration for remote teams</h1>
+              <p>
+                All-in-one place for your remote team to chat, collaborate and
+                track project progress.
+              </p>
+            </div>
+            <div class="email-sub">
+              <form action="">
+                <input type="email" name="" id="" placeholder="Email" />
+                <i class="bi bi-arrow-right"></i>
+                <button type="submit">Get Early Access</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="second-section">
+        <div class="container">
+          <div class="second-section-content">
+            <div class="second-section-text">
+              <h1>Chats for your distributed teams</h1>
+              <p>
+                Team combines the immediacy of real-time chat with an email
+                threading model. With Team, you can catch up on important
+                conversations while ignoring irrelevant ones.
+              </p>
+              <div class="learn-more">
+                <a href="">Learn more</a>
+                <i class="bi bi-arrow-right"></i>
+              </div>
+            </div>
+            <div class="second-section-image">
+              <img src="img/mockup.png" alt="" srcset="" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="third-section">
+        <div class="container">
+          <div class="third-section-content">
+            <div class="third-section-image">
+              <img
+                src="img/d0cfdfb245e744630ffe801512bc6777.jpg"
+                alt=""
+                srcset=""
+              />
+            </div>
+            <div class="third-section-text">
+              <h1>Choose how you want to work</h1>
+              <p>
+                In Team, you’ve got all the flexibility to work when, where and
+                how it’s best for you. You can easily chat, send audio and video
+                clips, or hop on a huddle to talk things out live.
+              </p>
+              <div class="learn-more">
+                <a href="">Learn more</a>
+                <i class="bi bi-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="fourth-section">
+        <div class="container">
+          <div class="fourth-section-text">
+            <h1>Chats for your distributed teams</h1>
+            <p>
+              Team combines the immediacy of real-time chat with an email
+              threading model. With Team, you can catch up on important
+              conversations while ignoring irrelevant ones.
+            </p>
+            <div class="learn-more">
+              <a href="">Learn more</a>
+              <i class="bi bi-arrow-right"></i>
+            </div>
+          </div>
+          <div class="fourth-section-image">
+            <img src="img/Rectangle.png" alt="" srcset="" />
+          </div>
+        </div>
+      </div>
+      <div class="third-section">
+        <div class="container">
+          <div class="third-section-content">
+            <div class="third-section-image">
+              <img src="img/Rectangle2.png" alt="" srcset="" />
+            </div>
+            <div class="third-section-text">
+              <h1>Move faster with your Team tools</h1>
+              <p>
+                With your other work apps connected to Team, you can work faster
+                by switching tabs less. And with powerful tools like Workflow
+                Builder, you can automate away routine tasks.
+              </p>
+              <div class="learn-more">
+                <a href="">Learn more</a>
+                <i class="bi bi-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial">
+        <h1>What people say about Team</h1>
+        <div class="container test-slide">
+          <div class="testimonial-card">
+            <div class="rating">
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <span>
+              Vestibulum eu quam nec neque pellentesque efficitur id eget nisl.
+              Proin porta est convallis lacus blandit pretium sed non enim.
+              Maecenas lacinia non orci at aliquam. Donec finibus, urna bibendum
+              ultricies laoreet.
+            </span>
+            <div class="user">
+              <div>
+                <img src="img/user.png" alt="" />
+              </div>
+              <div style="margin-left: 15px">
+                <h3>Chealsea Morgan</h3>
+                <p>CEO ot Subway</p>
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <div class="rating">
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <span>
+              Vestibulum eu quam nec neque pellentesque efficitur id eget nisl.
+              Proin porta est convallis lacus blandit pretium sed non enim.
+              Maecenas lacinia non orci at aliquam. Donec finibus, urna bibendum
+              ultricies laoreet.
+            </span>
+            <div class="user">
+              <div>
+                <img src="img/user.png" alt="" />
+              </div>
+              <div style="margin-left: 15px">
+                <h3>Chealsea Morgan</h3>
+                <p>CEO ot Subway</p>
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <div class="rating">
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <span>
+              Vestibulum eu quam nec neque pellentesque efficitur id eget nisl.
+              Proin porta est convallis lacus blandit pretium sed non enim.
+              Maecenas lacinia non orci at aliquam. Donec finibus, urna bibendum
+              ultricies laoreet.
+            </span>
+            <div class="user">
+              <div>
+                <img src="img/user.png" alt="" />
+              </div>
+              <div style="margin-left: 15px">
+                <h3>Chealsea Morgan</h3>
+                <p>CEO ot Subway</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container footer-container">
+          <div class="about">
+            <div class="logo">
+              <h1>team<b style="color: #5468e7">.</b></h1>
+            </div>
+            <p>Collaboration platform for mordern team</p>
+          </div>
+          <div class="company">
+            <h1>Company</h1>
+            <a href="">
+              <p>Product</p>
+            </a>
+            <a href="">
+              <p>Blog</p>
+            </a>
+            <a href="">
+              <p>Support</p>
+            </a>
+          </div>
+          <div class="features">
+            <h1>Features</h1>
+            <p>Screen Sharing</p>
+            <p>iOS & Android Apps</p>
+            <p>File Sharing</p>
+            <p>User Managment</p>
+          </div>
+          <div class="contact-footer">
+            <h1>Contact Us</h1>
+            <p>info@teamapp.com</p>
+            <p>1-800-200-300</p>
+            <p>1010 Sunset Blv. Palo Alto, California</p>
+          </div>
+          <div class="subscribe">
+            <h1>Stay up to date</h1>
+            <p>Subscribe to our newseller</p>
+            <form action="">
+              <input type="email" name="" id="" placeholder="Email" />
+
+              <button type="submit"><i class="bi bi-arrow-right"></i></button>
+            </form>
+          </div>
+        </div>
+        <div class="copyright container">
+          <p>© Copyright Team Inc.</p>
+        </div>
+      </footer>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
